update login + create pages

--- a/templates/create.html
+++ b/templates/create.html
@@ -134,6 +134,6 @@
         <a href="/login">Already have an account? Log in!</a>
         <a href="{{ url_for('continue_without_login') }}" class="continue-login">Continue without Signing Up</a>
     </div>
-    <div class="footer">By Nandan Reddy S</div> <!-- Your name placed at the bottom left -->
+<div class="footer">By Farrah, Chris, Amirah & Alya</div>
 </body>
 </html>
