Fix report route + update home button

--- a/templates/home.html
+++ b/templates/home.html
@@ -210,7 +210,7 @@
       </div>
 
       <div class="actions">
-        <a class="btn btn-primary" href="{{ url_for('create') }}">+ Report an Item</a>
+        <a class="btn btn-primary" href="{{ url_for('report') }}">+ Report an Item</a>
         <a class="btn btn-outline" href="{{ url_for('home') }}">Refresh</a>
         {# If you later add a view_items route, you can bring this back:
            <a class="btn btn-outline" href="{{ url_for('view_items') }}">View Items</a>
