--- a/templates/create.html
+++ b/templates/create.html
@@ -132,7 +132,7 @@
             <button type="submit">Sign Up</button>
         </form>
         <a href="/login">Already have an account? Log in!</a>
-        <a href="{{ url_for('continue_without_login') }}" class="continue-login">Continue without Signing Up</a>
+<a href="{{ url_for('login') }}">Back to Login</a>
     </div>
 <div class="footer">By Farrah, Chris, Amirah & Alya</div>
 </body>
