--- a/templates/home.html
+++ b/templates/home.html
@@ -173,6 +173,11 @@
   <div class="topbar">
     <div class="title">Lost & Found System</div>
     <a href="{{ url_for('logout') }}">Logout</a>
+    {% if current_user.is_admin %}
+    <a href="{{ url_for('view_logs') }}" style="color: red; font-weight: bold;">[VIEW ADMIN LOGS]
+
+    </a>
+  {% endif %}
   </div>
 
   <div class="container">
